<resources>
    <string name="app_name">18 May</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="welcome_to_wheelnav">Welcome To WheelNav</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="account_info">Account Info</string>
    <string name="my_account_info">My Account Info</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="previous_password">Previous Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_mail_account">Enter your mail account</string>
    <string name="send_mail_to_reset_password">Send Mail to Reset Password</string>
    <string name="continue_as_guest">Continue as guest.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="username">username</string>
    <string name="change_password">Change Password</string>
    <string name="wheelnav">WheelNav</string>
    <string name="go_back">Go back</string>
    <string-array name="buildingNames">
        <item>A</item>
        <item>B</item>
        <item>EE</item>
        <item>EA</item>
        <item>EB</item>
        <item>FA</item>
        <item>FB</item>
        <item>FC</item>
        <item>FF</item>
        <item>G</item>
        <item>H</item>
        <item>L</item>
        <item>MA</item>
        <item>MASJID</item>
        <item>METEKSAN BOOKSTORE</item>
        <item>SPEED</item>
        <item>SA</item>
        <item>SB</item>
        <item>T</item>
        <item>UNAM</item>
        <item>V</item>
    </string-array>
</resources>