<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    tools:context=".LogIn">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_wheelnav"
        android:drawableBottom="@drawable/baseline_wheelchair_pickup_24"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginBottom="75dp" />

    <TextView
        android:text="@string/log_in"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputEditText
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/email"
        android:height="50dp"
        android:layout_width="match_parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputEditText android:layout_height="wrap_content"
        android:hint="@string/password"
        android:height="50dp"
        android:id="@+id/password"
        android:layout_width="match_parent"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="200dp"
        android:layout_marginTop="40dp"
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:backgroundTint="@color/black"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/passToRegister"
        android:text="@string/don_t_have_an_account"
        android:textSize="15sp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="match_parent"
        android:id="@+id/continueGuest"
        android:text="@string/continue_as_guest"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/forgotPassword"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

</LinearLayout>