<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ForgotPassword">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/reset_password"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_mail_account"
            android:id="@+id/email"
            android:height="50dp"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:id="@+id/resetPwd_btn"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:text="@string/send_mail_to_reset_password"
            android:gravity="center"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/go_back"
            android:text="@string/go_back"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>
