<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ChangePassword">

    <TextView
        android:layout_width="match_parent"
        android:text="Change Password"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputEditText android:layout_height="wrap_content"
        android:hint="@string/previous_password"
        android:height="50dp"
        android:layout_marginTop="160dp"
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputEditText android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:height="50dp"
        android:id="@+id/password"
        android:layout_width="match_parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputEditText android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:height="50dp"
        android:id="@+id/password2"
        android:layout_width="match_parent"/>
    <TextView
        android:layout_width="match_parent"

        android:text="Enter your new password twice"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:drawableStart="@drawable/baseline_back_hand_24"
        android:layout_height="wrap_content"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="200dp"
        android:layout_marginTop="40dp"
        android:id="@+id/update_btn"
        android:text="@string/update_password"
        android:backgroundTint="@color/black"
        android:layout_height="wrap_content" />

</LinearLayout>